--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -36,15 +36,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40 divided by 8 is 5.0\n"
+     ]
+    }
+   ],
    "source": [
     "numb1 = int(input(\"Enter your first number:\"))\n",
     "numb2 = int(input(\"Enter your second number:\"))\n",
     "result = numb1/numb2\n",
     "\n",
-    "print{f'{numb1} divided by {numb2} is {result}'}\n"
+    "print(f'{numb1} divided by {numb2} is {result}')\n"
    ]
   },
   {
@@ -57,12 +65,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1! = 1\n",
+      "2! = 2\n",
+      "3! = 6\n",
+      "4! = 24\n",
+      "5! = 120\n",
+      "6! = 720\n",
+      "7! = 5040\n",
+      "8! = 40320\n",
+      "9! = 362880\n"
+     ]
+    }
+   ],
    "source": [
-    "n = 10\n",
-    "factorial = 1\n"
+    "for x in range(1,10):\n",
+    "    if x == 1:\n",
+    "        factorial = 1\n",
+    "        print(f'1! = {factorial}')\n",
+    "    else:\n",
+    "        factorial = factorial * x\n",
+    "        print(f'{x}! = {factorial}')\n"
    ]
   },
   {
@@ -75,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
