Creating Function Done

--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -36,23 +36,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "40 divided by 8 is 5.0\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'numb1 = int(input(\"Enter your first number:\"))\\nnumb2 = int(input(\"Enter your second number:\"))\\nresult = numb1/numb2\\n\\nprint(f\\'{numb1} divided by {numb2} is {result}\\')'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "numb1 = int(input(\"Enter your first number:\"))\n",
+    "\"\"\"numb1 = int(input(\"Enter your first number:\"))\n",
     "numb2 = int(input(\"Enter your second number:\"))\n",
     "result = numb1/numb2\n",
     "\n",
-    "print(f'{numb1} divided by {numb2} is {result}')\n"
+    "print(f'{numb1} divided by {numb2} is {result}')\"\"\"\n"
    ]
   },
   {
@@ -65,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -104,11 +107,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean of your list is 0.0\n"
+     ]
+    }
+   ],
    "source": [
-    "testlist = [1,-1,2,-2,3,-3,4,-4]"
+    "testlist = [1,-1,2,-2,3,-3,4,-4]\n",
+    "\n",
+    "def list_mean(list):\n",
+    "    Total = sum(list)\n",
+    "    mean = Total / len(list)\n",
+    "    print(f'The mean of your list is {mean}')\n",
+    "\n",
+    "list_mean(testlist)\n"
    ]
   },
   {
@@ -126,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
