--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "'numb1 = int(input(\"Enter your first number:\"))\\nnumb2 = int(input(\"Enter your second number:\"))\\nresult = numb1/numb2\\n\\nprint(f\\'{numb1} divided by {numb2} is {result}\\')'"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -144,13 +144,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The mean of your list is -0.39\n",
+      "The variance of your list is 1.14\n",
+      "The mean of your list is 0.65\n",
+      "The variance of your list is 0.93\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = [ 5.670e-1, -1.480e+0, -5.570e-1, -1.470e+0, 7.340e-1, 1.050e+0, 4.480e-1, 2.570e-1, -1.970e+0, -1.460e+0]\n",
     "list2 = [-1.780e+0, 2.640e-1, 1.160e+0, 9.080e-1, 1.780e+0, 1.080e+0, 1.050e+0, -4.630e-2, 1.520e+0, 5.350e-1]\n",
-    "# the variances of both lists should be relatively close to 1 (off by less than .15)"
+    "# the variances of both lists should be relatively close to 1 (off by less than .15)\n",
+    "\n",
+    "def list_variance(list):\n",
+    "    # 1. Find the Mean\n",
+    "    Total = sum(list)\n",
+    "    mean = Total / len(list)\n",
+    "    print(f'The mean of your list is {mean:.2f}')\n",
+    "    # 2. Subtract the mean of the elements in the list from every element in the list\n",
+    "    newlist = []\n",
+    "    for x in list:\n",
+    "        newlist.append(x - mean)\n",
+    "    # 3. Square every element in the new list\n",
+    "    step3list = []\n",
+    "    for x in newlist:\n",
+    "        step3list.append(x*x)\n",
+    "    # 4. Find the variance(average of your new list)\n",
+    "    Var_Total = sum(step3list)\n",
+    "    variance = Var_Total / len(step3list)\n",
+    "    print(f'The variance of your list is {variance:.2f}')\n",
+    "\n",
+    "    \n",
+    "\n",
+    "list_variance(list1)\n",
+    "list_variance(list2)"
    ]
   },
   {
@@ -205,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
