List Slicing Done

--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -45,7 +45,7 @@
        "'numb1 = int(input(\"Enter your first number:\"))\\nnumb2 = int(input(\"Enter your second number:\"))\\nresult = numb1/numb2\\n\\nprint(f\\'{numb1} divided by {numb2} is {result}\\')'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -202,10 +202,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Here is my list: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]\n",
+      "Here are the first 5 elements: [1, 2, 3, 4, 5]\n",
+      "Here are the last 5 elements: [11, 12, 13, 14, 15]\n",
+      "Here is my list reversed: [15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "Here is every second element in the list: [2, 4, 6, 8, 10, 12, 14]\n",
+      "Here is every third element in the list: [3, 6, 9, 12, 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "My_List = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15]\n",
+    "\n",
+    "print(f'Here is my list: {My_List[::]}')\n",
+    "print(f'Here are the first 5 elements: {My_List[:5:1]}')\n",
+    "print(f'Here are the last 5 elements: {My_List[-5::1]}')\n",
+    "print(f'Here is my list reversed: {My_List[::-1]}')\n",
+    "print(f'Here is every second element in the list: {My_List[1::2]}')\n",
+    "print(f'Here is every third element in the list: {My_List[2::3]}')\n"
+   ]
   },
   {
    "attachments": {},
@@ -239,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [],
    "source": [
