--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -36,26 +36,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'numb1 = int(input(\"Enter your first number:\"))\\nnumb2 = int(input(\"Enter your second number:\"))\\nresult = numb1/numb2\\n\\nprint(f\\'{numb1} divided by {numb2} is {result}\\')'"
-      ]
-     },
-     "execution_count": 135,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "34 divided by 7 is 4.86\n"
+     ]
     }
    ],
    "source": [
-    "\"\"\"numb1 = int(input(\"Enter your first number:\"))\n",
+    "numb1 = int(input(\"Enter your first number:\"))\n",
     "numb2 = int(input(\"Enter your second number:\"))\n",
     "result = numb1/numb2\n",
     "\n",
-    "print(f'{numb1} divided by {numb2} is {result}')\"\"\"\n"
+    "print(f'{numb1} divided by {numb2} is {result:.2f}')\n"
    ]
   },
   {
@@ -68,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
@@ -202,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
@@ -246,10 +243,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 296,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Class Name': 'Continuous Intelligence and Interactive Analytics', 'Course Number': 44630, 'Semester/Term': 'Summer OP Block 2', 'Credit Hours': 3, 'Course Learning Objectives': ['LO1 - Describe the concept of continuous intelligence and its importance in modern data-driven decision making.', 'LO2 - Describe current tools and technologies used for data analytics and continuous intelligence.', 'LO3 - Create data visualizations and interactive dashboards.', 'LO4 - Deploy and share data visualizations and interactive dashboards.']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict = {\n",
+    "    \"Class Name\": \"Continuous Intelligence and Interactive Analytics\",\n",
+    "    \"Course Number\": 44630,\n",
+    "    \"Semester/Term\": \"Summer OP Block 2\",\n",
+    "    \"Credit Hours\": 3,\n",
+    "    \"Course Learning Objectives\": [\"LO1 - Describe the concept of continuous intelligence and its importance in modern data-driven decision making.\", \n",
+    "                                   \"LO2 - Describe current tools and technologies used for data analytics and continuous intelligence.\",\n",
+    "                                   \"LO3 - Create data visualizations and interactive dashboards.\",\n",
+    "                                   \"LO4 - Deploy and share data visualizations and interactive dashboards.\"]\n",
+    "}\n",
+    "\n",
+    "print(dict)"
+   ]
   },
   {
    "attachments": {},
@@ -261,9 +279,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 297,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Level 3 Spells\n",
+      "['Mass Healing Word', 'Nondetection', 'Revivify', 'Feign Death', 'Speak with Dead']\n"
+     ]
+    }
+   ],
    "source": [
     "player_character = {'name': 'Kitab',\n",
     "                   'class': [('Cleric: Knowledge', 7)],\n",
@@ -272,7 +299,10 @@
     "                             'level 2': ['Augury', 'Calm Emotions', 'Command', 'Invisibility', 'Lesser Restoration'],\n",
     "                             'level 3': ['Mass Healing Word', 'Nondetection', 'Revivify', 'Feign Death', 'Speak with Dead'],\n",
     "                             'level 4': ['Banishment', 'Confusion']}\n",
-    "                   }"
+    "                   }\n",
+    "\n",
+    "print(f'Level 3 Spells')\n",
+    "print(player_character['spells']['level 3'])"
    ]
   },
   {
@@ -285,11 +315,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 298,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 12 unique values in your list.\n"
+     ]
+    }
+   ],
    "source": [
-    "values = [10, 11, 10, 8, 1, 12, 0, 1, 6, 5, 5, 13, 6, 15, 0, 0, 1, 1, 9, 7]"
+    "values = [10, 11, 10, 8, 1, 12, 0, 1, 6, 5, 5, 13, 6, 15, 0, 0, 1, 1, 9, 7]\n",
+    "\n",
+    "unique_values = set(values)\n",
+    "count = len(unique_values)\n",
+    "print(f'There are {count} unique values in your list.')\n"
    ]
   },
   {
