Updated class info to correct class

--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "34 divided by 7 is 4.86\n"
+      "64 divided by 7 is 9.14\n"
      ]
     }
    ],
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -243,27 +243,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Class Name': 'Continuous Intelligence and Interactive Analytics', 'Course Number': 44630, 'Semester/Term': 'Summer OP Block 2', 'Credit Hours': 3, 'Course Learning Objectives': ['LO1 - Describe the concept of continuous intelligence and its importance in modern data-driven decision making.', 'LO2 - Describe current tools and technologies used for data analytics and continuous intelligence.', 'LO3 - Create data visualizations and interactive dashboards.', 'LO4 - Deploy and share data visualizations and interactive dashboards.']}\n"
+      "{'Class Name': 'Web Mining and Applied Natural Language Processing', 'Course Number': 44620, 'Semester/Term': 'Summer OP Block 2', 'Credit Hours': 3, 'Course Learning Objectives': ['LO1 - Manage Python libraries and packages.', 'LO2 - Interact with Hosted Version Control Systems. (e.g. Git and GitHub)', 'LO3 - Programmatically obtain and transform data from web-based APIs and HTML pages into a usable form.', 'LO4 - Describe the steps in a basic Natural Language Processing Pipeline.LO5 - Use preexisting tools and software libraries to perform some Natural Language Processing, such as sentiment analysis.LO6 - Explain results and conclusions drawn from the visualized information.']}\n"
      ]
     }
    ],
    "source": [
     "dict = {\n",
-    "    \"Class Name\": \"Continuous Intelligence and Interactive Analytics\",\n",
-    "    \"Course Number\": 44630,\n",
+    "    \"Class Name\": \"Web Mining and Applied Natural Language Processing\",\n",
+    "    \"Course Number\": 44620,\n",
     "    \"Semester/Term\": \"Summer OP Block 2\",\n",
     "    \"Credit Hours\": 3,\n",
-    "    \"Course Learning Objectives\": [\"LO1 - Describe the concept of continuous intelligence and its importance in modern data-driven decision making.\", \n",
-    "                                   \"LO2 - Describe current tools and technologies used for data analytics and continuous intelligence.\",\n",
-    "                                   \"LO3 - Create data visualizations and interactive dashboards.\",\n",
-    "                                   \"LO4 - Deploy and share data visualizations and interactive dashboards.\"]\n",
+    "    \"Course Learning Objectives\": [\"LO1 - Manage Python libraries and packages.\", \n",
+    "                                   \"LO2 - Interact with Hosted Version Control Systems. (e.g. Git and GitHub)\",\n",
+    "                                   \"LO3 - Programmatically obtain and transform data from web-based APIs and HTML pages into a usable form.\",\n",
+    "                                   \"LO4 - Describe the steps in a basic Natural Language Processing Pipeline.\"\n",
+    "                                   \"LO5 - Use preexisting tools and software libraries to perform some Natural Language Processing, such as sentiment analysis.\"\n",
+    "                                   \"LO6 - Explain results and conclusions drawn from the visualized information.\"]\n",
     "}\n",
     "\n",
     "print(dict)"
@@ -279,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
