--- a/s506571.ipynb
+++ b/s506571.ipynb
@@ -5,7 +5,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Name: Wade Bryson"
+    "# Web Mining and Applied NLP (44-620)\n",
+    "\n",
+    "## Python Notebooks, Basics, and Data Structures\n",
+    "\n",
+    "### Student Name: Wade Bryson\n",
+    "\n",
+    "### GitHub Link: https://github.com/WadeBryson"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Question 10 - Create New Jupyter Notebook**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "10. Create a new Jupyter Notebook (the name of the notebook should be your S number). Add a Markdown cell that contains your name. Add a Code cell and write Python that uses loops to draw the following pattern:\n",
+    "\n",
+    "```\n",
+    "*      *\n",
+    "**    **\n",
+    "***  ***\n",
+    "********\n",
+    "```\n",
+    "Make sure to add and submit both the new notebook and the changes to this notebook for this assignment."
    ]
   },
   {
