#10 ---> html + typo in dictionary

--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -11,6 +11,8 @@
     "\n",
     "### Student Name: Wade Bryson\n",
     "\n",
+    "### GitHub Link: https://github.com/WadeBryson\n",
+    "\n",
     "Perform the tasks described in the Markdown cells below.  When you have completed the assignment make sure your code cells have all been run (and have output beneath them) and ensure you have committed and pushed ALL of your changes to your assignment repository.\n",
     "\n",
     "Every question that requires you to write code will have a code cell underneath it; you may either write your entire solution in that cell or write it in a python file (`.py`), then import and run the appropriate code to answer the question.\n",
@@ -23,7 +25,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### **Question 1 - Edit Markdown Text**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "1. Modify the Markdown cell above to put your name after \"Student Name:\"; you will be expected to do this in all assignments presented in this format for this class."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Question 2 - Input and Basic Division**"
    ]
   },
   {
@@ -53,6 +71,14 @@
     "result = numb1/numb2\n",
     "\n",
     "print(f'{numb1} divided by {numb2} is {result:.2f}')\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Question 3 - Loops**"
    ]
   },
   {
@@ -99,6 +125,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### **Question 4 - Create a Function**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "4. Write a python function that takes a single parameter and calculates and returns the average (mean) of the values in the parameter (which you may assume is iterable).  Show that your function works by printing the result of calling the function on the list in the cell below."
    ]
   },
@@ -124,6 +158,14 @@
     "    print(f'The mean of your list is {mean}')\n",
     "\n",
     "list_mean(testlist)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Question 5 - Deep dive with Functions**"
    ]
   },
   {
@@ -189,6 +231,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### **Question 6 - List Slicing**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "6. Create a list with at least 15 elements in it. Use list slicing to print the following:\n",
     "* The first 5 elements of the list\n",
     "* The last 5 elements of the list\n",
@@ -231,6 +281,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### **Question 7 - Creating a Dictionary**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "7. Build a dictionary that contains the following information about this class (with appropriate names as keys):\n",
     "* The name\n",
     "* The course number\n",
@@ -250,7 +308,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Class Name': 'Web Mining and Applied Natural Language Processing', 'Course Number': 44620, 'Semester/Term': 'Summer OP Block 2', 'Credit Hours': 3, 'Course Learning Objectives': ['LO1 - Manage Python libraries and packages.', 'LO2 - Interact with Hosted Version Control Systems. (e.g. Git and GitHub)', 'LO3 - Programmatically obtain and transform data from web-based APIs and HTML pages into a usable form.', 'LO4 - Describe the steps in a basic Natural Language Processing Pipeline.LO5 - Use preexisting tools and software libraries to perform some Natural Language Processing, such as sentiment analysis.LO6 - Explain results and conclusions drawn from the visualized information.']}\n"
+      "{'Class Name': 'Web Mining and Applied Natural Language Processing', 'Course Number': 44620, 'Semester/Term': 'Summer OP Block 2', 'Credit Hours': 3, 'Course Learning Objectives': ['LO1 - Manage Python libraries and packages.', 'LO2 - Interact with Hosted Version Control Systems. (e.g. Git and GitHub)', 'LO3 - Programmatically obtain and transform data from web-based APIs and HTML pages into a usable form.', 'LO4 - Describe the steps in a basic Natural Language Processing Pipeline.', 'LO5 - Use preexisting tools and software libraries to perform some Natural Language Processing, such as sentiment analysis.', 'LO6 - Explain results and conclusions drawn from the visualized information.']}\n"
      ]
     }
    ],
@@ -263,12 +321,20 @@
     "    \"Course Learning Objectives\": [\"LO1 - Manage Python libraries and packages.\", \n",
     "                                   \"LO2 - Interact with Hosted Version Control Systems. (e.g. Git and GitHub)\",\n",
     "                                   \"LO3 - Programmatically obtain and transform data from web-based APIs and HTML pages into a usable form.\",\n",
-    "                                   \"LO4 - Describe the steps in a basic Natural Language Processing Pipeline.\"\n",
-    "                                   \"LO5 - Use preexisting tools and software libraries to perform some Natural Language Processing, such as sentiment analysis.\"\n",
+    "                                   \"LO4 - Describe the steps in a basic Natural Language Processing Pipeline.\",\n",
+    "                                   \"LO5 - Use preexisting tools and software libraries to perform some Natural Language Processing, such as sentiment analysis.\",\n",
     "                                   \"LO6 - Explain results and conclusions drawn from the visualized information.\"]\n",
     "}\n",
     "\n",
     "print(dict)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Question 8 - Locating Items in a Dictionary**"
    ]
   },
   {
@@ -312,6 +378,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### **Question 9 - Sets**"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "9. Write code to determine the number of unique elements in the list below.  You MUST use a set in finding your solution.  Print the number of unique values in the list with an appropriate label."
    ]
   },
@@ -334,6 +408,14 @@
     "unique_values = set(values)\n",
     "count = len(unique_values)\n",
     "print(f'There are {count} unique values in your list.')\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Question 10 - Create New Jupyter Notebook**"
    ]
   },
   {
